[package]
name = "table_map_db"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
indexmap = "2.2.6"
anyhow = "1.0.83"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rand = "0.9.0-alpha.1"
csv = "1.3.0"
tokio = { version = "1.37.0", features = ["full"] }
thiserror = "1.0.61"
